Rework the problem environement
Adds the cref name to the environement for further references

--- a/content/p_np.tex
+++ b/content/p_np.tex
@@ -39,11 +39,7 @@ The steps to proving a problem $A$ is $\NP$-complete are:
 \section{Boolean Satisfiability}
 
 The ``first'' $\NP$-complete problem is \emph{boolean satisfiability}.
-
-\problem{Satisfiability (SAT)}{
-	A set $U$ of variables and a collection $C$ of clauses over $U$.
-}{
-	Is there a truth assignment to the variables in $U$ that satisfies $C$?
-}
-
+\problem[SAT]{Satisfiability}{A set $U$ of variables and a collection $C$ of clauses over $U$.}{Is there a truth assignment to the variables in $U$ that satisfies $C$?}
+\cref{prob:SAT}
+\nameref{prob:SAT}
 \section{Problems}
