Fixed some formatting issues

--- a/content/dfa_minimization.tex
+++ b/content/dfa_minimization.tex
@@ -12,10 +12,10 @@ We want to minimize the size of a finite automaton as much as possible, \emph{as
 
 \section{Minimization}
 
-Think about the following two states:
+Think about the  states $s_{0}$ \& $s_{1}$ in the following automaton:
 
 %\todo{fix the transition labels and state names}
-\begin{figure}[htb]
+\begin{figure}[H]
   \centering
 \begin{tikzpicture}[scale=0.7, shorten >=1pt,node distance=5cm,on grid,auto,initial text={},every state/.style={align=center},line width=0.4mm]
   \node[state,initial] (q_0)   {$s_0$};
