--- a/content/p_np.tex
+++ b/content/p_np.tex
@@ -15,7 +15,7 @@ Clearly, they must take some amount of time/resources/etc. to solve; the questio
 
 \section{P and NP}
 
-Until recently,\footnote{This has changed to having ``fast'' representing ``log-linear'' runtime (i.e., of the form $O(n \log^c n)$ for some constant $c$), and any runtime ``more'' than this is ``slow.''} one important measure of distinguishing ``slow'' from ``fast'' algorithms was that when they ran in ``polynomial time,'' then they were ``fast''; otherwise, they were ``slow.''
+Until recently\footnote{This has changed to having ``fast'' representing ``log-linear'' runtime (i.e., of the form $O(n \log^c n)$ for some constant $c$), and any runtime ``more'' than this is ``slow.''}, one important measure of distinguishing ``slow'' from ``fast'' algorithms was that when they ran in ``polynomial time,'' then they were ``fast''; otherwise, they were ``slow.''
 
 \section{NP-Complete Problems}
 
@@ -31,7 +31,7 @@ The steps to proving a problem $A$ is $\NP$-complete are:
 		\todo{Add figure of reduction}
 		\item Describe the transformation.
 		\item Prove the transformation can be accomplished in deterministic polynomial time.
-		\item \underline{Prove a solution to $A$ is equivalent to a solution to the corresponding instance of $B$.} (This is the most important step.)
+		\item \emph{Prove a solution to $A$ is equivalent to a solution to the corresponding instance of $B$.} (This is the most important step.)
 	\end{enumerate}
 	\item \textbf{Summarize and Conclude}.
 \end{enumerate}
