Correct spacing after chapter ToC

--- a/main.tex
+++ b/main.tex
@@ -167,7 +167,7 @@ skipabove=\baselineskip,ntheorem
 }
 {%style after the chapter's ToC
 \noindent\hrulefill% Trace the line below ToC
-\par\nobreak\addvspace{\aftersecskip}% Add spaces if needed
+\par\nobreak\addvspace{\midchapskip}% Add spaces if needed
 \afhead% Warn TeX engine we are after a heading (without effect if ToC empty, duplicate)
 \microtypesetup{protrusion=false}% Re-enable microtype
 }
