First part of livestream 2 Aug 2021

--- a/content/powerset.tex
+++ b/content/powerset.tex
@@ -12,7 +12,15 @@
 
 \section{Removing $\emptystring$}
 
+Suppose we have the following NFA:
+
+\todo{Put in an NFA}
+
 \subsection{$\emptystring$-Closure}
+
+\begin{definition}
+	Let $N = (\setofstatesname, \inputalphabetname, \transitionfunctionname, \startstatename, \acceptstatesname)$
+\end{definition}
 
 \section{The ``Powerset'' Construction (NFA $\to$ DFA)}
 
