--- a/main.tex
+++ b/main.tex
@@ -124,6 +124,8 @@ skipabove=\baselineskip,ntheorem
 \newcommand{\tmacceptstatename}{s_{accept}}
 \newcommand{\tmrejectstatename}{s_{reject}}
 
+\newcommand{\arbitrarysubsetofstatesname}{X}
+
 \newcommand{\transitionfunctionname}{\delta}
 \newcommand{\inputalphabetname}{\Sigma}
 \newcommand{\stackalphabetname}{\Gamma}
@@ -218,7 +220,7 @@ skipabove=\baselineskip,ntheorem
 %\input{content/recursive_defs}
 %\input{content/structural_induction}
 \part{Regular Languages}
-%\input{content/dfa}
+\input{content/dfa}
 %\input{content/dfa_minimization}
 %
 %\input{content/nonregular_myhillnerode}
