--- a/main.tex
+++ b/main.tex
@@ -23,7 +23,7 @@
 
 \usepackage{mathtools,amssymb}
 \usepackage[euler-hat-accent]{eulervm}
-\usepackage[cal=euler,frak=euler,bb=boondox,scr=boondoxupr]{mathalpha}
+%\usepackage[cal=euler,frak=euler,bb=boondox,scr=boondoxupr]{mathalpha}
 \usepackage[type1]{cabin}
 \usepackage[varqu,varl]{inconsolata}
 \usepackage[backend=biber,style=alphabetic]{biblatex}
